--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:server": "node --loader ts-node/esm --experimental-specifier-resolution=node GAME_ENV=dev src/server/Server.ts",
     "start:server-dev": "cross-env GAME_ENV=dev node --loader ts-node/esm --experimental-specifier-resolution=node src/server/Server.ts",
     "dev": "cross-env GAME_ENV=dev concurrently \"npm run start:client\" \"npm run start:server-dev\"",
+    "ghetto": "cross-env GAME_ENV=Prod concurrently \"npm run start:client\" \"npm run start:server\"",
     "tunnel": "npm run build-prod && npm run start:server",
     "test": "jest",
     "test:coverage": "jest --coverage",
