--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build-dev": "webpack --config webpack.config.js --mode development",
     "build-prod": "webpack --config webpack.config.js --mode production",
     "start:client": "webpack serve --open --node-env development",
-    "start:server": "node --loader ts-node/esm --experimental-specifier-resolution=node GAME_ENV=dev src/server/Server.ts",
+    "start:server": "node --loader ts-node/esm --experimental-specifier-resolution=node GAME_ENV=prod src/server/Server.ts",
     "start:server-dev": "cross-env GAME_ENV=dev node --loader ts-node/esm --experimental-specifier-resolution=node src/server/Server.ts",
     "dev": "cross-env GAME_ENV=dev concurrently \"npm run start:client\" \"npm run start:server-dev\"",
     "ghetto": "cross-env GAME_ENV=Prod concurrently \"npm run start:client\" \"npm run start:server\"",
