fix: update ghetto script to use start:server-prod for production environment

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start:client": "webpack serve --open --node-env development",
     "start:server": "node --loader ts-node/esm --experimental-specifier-resolution=node GAME_ENV=prod src/server/Server.ts",
     "start:server-dev": "cross-env GAME_ENV=dev node --loader ts-node/esm --experimental-specifier-resolution=node src/server/Server.ts",
+    "start:server-prod": "cross-env GAME_ENV=prod node --loader ts-node/esm --experimental-specifier-resolution=node src/server/Server.ts",
     "dev": "cross-env GAME_ENV=dev concurrently \"npm run start:client\" \"npm run start:server-dev\"",
-    "ghetto": "cross-env GAME_ENV=Prod concurrently \"npm run start:client\" \"npm run start:server\"",
+    "ghetto": "cross-env GAME_ENV=Prod concurrently \"npm run start:client\" \"npm run start:server-prod\"",
     "tunnel": "npm run build-prod && npm run start:server",
     "test": "jest",
     "test:coverage": "jest --coverage",
