--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:server-dev": "cross-env GAME_ENV=dev node --loader ts-node/esm --experimental-specifier-resolution=node src/server/Server.ts",
     "start:server-prod": "cross-env GAME_ENV=prod node --loader ts-node/esm --experimental-specifier-resolution=node src/server/Server.ts",
     "dev": "cross-env GAME_ENV=dev concurrently \"npm run start:client\" \"npm run start:server-dev\"",
-    "ghetto": "cross-env GAME_ENV=Prod concurrently \"npm run start:client\" \"npm run start:server-prod\"",
+    "deploy": "git pull && npm run build-prod && pm2 start ecosystem.config.cjs",
     "tunnel": "npm run build-prod && npm run start:server",
     "test": "jest",
     "test:coverage": "jest --coverage",
