--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@types/msgpack5": "^3.4.6",
     "@types/raphael": "^2.3.9",
     "@types/twemoji": "^13.1.1",
+    "bad-words": "^4.0.0",
     "binary-loader": "^0.0.1",
     "colord": "^2.9.3",
     "copy-webpack-plugin": "^12.0.2",
